[workspace]
resolver = "2"
members = [
    "utils",
    "aoc_derive", "day1", "day2", "day3", "day4", "day5", "day6", "day7", "day8", "day9", "day10", "day11", "day12", "day13", "day14", "day15", "day16", "day17", "day18", "day19", "day20", "day21", "day22", "day23", "day24", "day25",
]

[workspace.dependencies]
derive_more = {version = "1.0", features = ["full"]}
itertools = "0.13.0"
ndarray = "0.16.1"
num = "0.4"
parse-display = "0.10.0"
priority-queue = "2.1"
rayon = "1.10"
regex = {version = "1.11", features = ["pattern"]}
lazy-regex = "3.3.0"
pretty_assertions = "1.4.0"
dot-writer="0.1.3"
